Inclusão de Imagens

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="viewport" content="width=device-width, initial-scale=1">
+    		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>Black Friday - PLACEHOLDER</title>
 
@@ -35,7 +35,9 @@
 			<main>
 				<section class="section_form">
 					<div class="div_section_form">
-						<div class="div_img_form"></div>
+						<div class="div_img_form">
+							<img src="https://cdn-icons-png.flaticon.com/512/1655/1655733.png" class="img_form" alt="Imagem Desconto">
+						</div>
 
 						<div class="div_form_form">
 							<div class="div_text_form">	
@@ -87,19 +89,25 @@
 
 						<ul class="lista_vantagens">
 							<li class="item_vantagens">
-								<div class="img_vantagem" id="trof_icon"></div>
+								<div class="div_img_vantagem">
+									<img src="https://cdn-icons-png.flaticon.com/512/616/616490.png" class="img_vantagem" alt="Imagem Vantagem">
+								</div>
 								<h4 class="title_vantagem">SEJA O PRIMEIRO</h4>
 								<p class="text_vantagem">Aproveite os descontos antes de todo mundo. A gente te avisa quando tiver oferta na loja. :)</p>
 							</li>
 
 							<li class="item_vantagens">
-								<div class="img_vantagem" id="star_icon"></div>
+								<div class="div_img_vantagem">
+									<img src="https://cdn-icons-png.flaticon.com/512/726/726476.png" class="img_vantagem" alt="Imagem Vantagem">
+								</div>
 								<h4 class="title_vantagem">OS MAIORES DESCONTOS</h4>
 								<p class="text_vantagem">Muitas promoções para você aproveitar. Garanta já, e salve seus favoritos.</p>
 							</li>
 
 							<li class="item_vantagens">
-								<div class="img_vantagem" id="gift_icon"></div>
+								<div class="div_img_vantagem">
+									<img src="https://cdn-icons-png.flaticon.com/512/362/362012.png" class="img_vantagem" alt="Imagem Vantagem">
+								</div>
 								<h4 class="title_vantagem">SORTEIO DE CUPONS</h4>
 								<p class="text_vantagem">Fique ligado para garantir brindes e até frete grátis! Receba tudo direto na sua caixa de entrada.</p>
 							</li>
@@ -129,22 +137,28 @@
 						<div class="div_list_produtos">
 							<ul class="lista_produtos">
 								<li class="item_produtos">
-									<div class="img_produto"></div>
+									<div class="div_img_produto">
+										<img src="https://cdn-icons-png.flaticon.com/512/962/962669.png" class="img_produto" alt="Imagem Produto">
+									</div>
 									<h4 class="title_produto">[Produto 1]</h4>
 									<p class="desc_produto">Estava com muitas dúvidas durante a fase de compra e contratação, mas a conversa com um especialista da empresa facilitou muito nosso trabalho e ajudou nosso processo.</p>
 									<input class="button_desconto" type="button" name="button_desconto" value="+ GARANTIR DESCONTO +">
 								</li>
 
 								<li class="item_produtos">
-									<div class="img_produto"></div>
-									<h4 class="title_produto">[Produto 1]</h4>
+									<div class="div_img_produto">
+										<img src="https://cdn-icons-png.flaticon.com/512/962/962669.png" class="img_produto" alt="Imagem Produto">
+									</div>
+									<h4 class="title_produto">[Produto 2]</h4>
 									<p class="desc_produto">Estava com muitas dúvidas durante a fase de compra e contratação, mas a conversa com um especialista da empresa facilitou muito nosso trabalho e ajudou nosso processo.</p>
 									<input class="button_desconto" type="button" name="button_desconto" value="+ GARANTIR DESCONTO +">
 								</li>
 
 								<li class="item_produtos">
-									<div class="img_produto"></div>
-									<h4 class="title_produto">[Produto 1]</h4>
+									<div class="div_img_produto">
+										<img src="https://cdn-icons-png.flaticon.com/512/962/962669.png" class="img_produto" alt="Imagem Produto">
+									</div>
+									<h4 class="title_produto">[Produto 3]</h4>
 									<p class="desc_produto">Estava com muitas dúvidas durante a fase de compra e contratação, mas a conversa com um especialista da empresa facilitou muito nosso trabalho e ajudou nosso processo.</p>
 									<input class="button_desconto" type="button" name="button_desconto" value="+ GARANTIR DESCONTO +">
 								</li>
